# aurora

./: .gitignore  .prettierignore  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src/components/editor/: Editor.css  Editor.tsx  EditorTheme.ts  EditorToolbar.css  EditorToolbar.tsx  StatusBar.css  StatusBar.tsx  index.ts
src/components/editor/plugins/: WordCountPlugin.test.ts  WordCountPlugin.tsx
src/store/: editorStore.ts
src/types/: index.ts
